# simple_flask

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
simple_flask/: __init__.py  auth.py  blog.py  db.py  forms.py  schema.sql
simple_flask/templates/: base.html  index.html
simple_flask/templates/auth/: login.html  register.html
simple_flask/templates/blog/: create.html  index.html  update.html
tests/: conftest.py  data.sql  test_auth.py  test_blackbox.py  test_blog.py  test_db.py  test_factory.py  test_simple_flask.py
